--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
                 android:textSize="16dp" />
 
             <TextView
-                android:id="@+id/multiply"
+                android:id="@+id/multiplyTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="25"
@@ -128,7 +128,6 @@
                 android:textColor="@color/black"
                 android:textSize="16dp" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="84dp"
